tests: run, capture and report the same way on every platform
The matrix that drove this runs 18 frameworks across 7 targets, and each gap it
found was a place where one platform behaved unlike the others.

Output. Scala.js and Scala Native never had theirs captured at all: the JS env
writes to a stream nobody read, and the Native adapter's `ProcessRunner`
hardcodes `inheritIO()`, so everything a test printed went to a descriptor the
parent had already stopped listening to. Both now capture — the JS side through
a proxying `JSEnv`, the Native side through a forked adapter (`ScalaNativeTestFork`)
that keeps stdout free for the binary and speaks a protocol over a loopback
socket instead.

Failures. A throwable's message was all that survived the trip, which is never
enough: a null `getMessage` is not the absence of information, it is one field
of an exception that also has a type and a stack. ScalaTest on Scala.js was the
clearest case — the explanation is in the type and the frames while the message
is null, so a failing assertion arrived saying nothing. Both are carried now.

Suites. `SuiteOutcome` is an ADT rather than a count tuple, so "ran no tests" is
distinguishable from "ran and failed" and from "no framework claimed it". A
suite with no tests in it is a perfectly ordinary thing to have and no longer
fails a build; a suite that failed without producing per-test events still does.

Kotlin/Native. A compile error took the daemon down with it, because
`K2Native.main` calls `exitProcess`. Routed through `CLICompiler.exec`, which
returns an exit code like every other compiler bleep drives.

`bleep link` works on test projects across all four JS/Native variants, and
reports the platform it actually linked for.

And the noise: bleep's own debug logs are no longer forwarded as test output,
ANSI is not emitted under `--no-color`, `sun.misc.Unsafe` warnings are gone, and
a non-zero exit says it may have been `System.exit` rather than leaving you to
guess.

Co-Authored-B