@@ -5,9 +5,14 @@ import bleep.bsp.protocol.KillReason
 import bleep.bsp.TaskDag.LinkResult
 import bleep.bsp.TestRunnerTypes.{RunnerEvent, TerminationReason, TestEventHandler, TestResult, TestSuite}
 import bleep.bsp.protocol.{OutputChannel, TestStatus}
-import cats.effect.{Deferred, IO}
+import cats.effect.{Deferred, IO, Resource}
 import cats.effect.std.Semaphore
+import java.io.{BufferedReader, InputStreamReader}
+import java.net.{InetAddress, ServerSocket}
+import java.nio.charset.StandardCharsets
 import java.nio.file.{Files, Path}
+import java.util.Properties
+import java.util.concurrent.atomic.AtomicReference
 import scala.jdk.CollectionConverters._
 
 /** Runner for Scala Native tests. */
@@ -209,7 +214,8 @@ object ScalaNativeTestRunner {
   def runTestsViaAdapter(
       binary: Path,
       suites: List[TestSuite],
-      framework: TestFramework,
+      // Unused, and was already unused one level down: the adapter asks the linked binary which frameworks it carries rather than being told.
+      @annotation.unused framework: TestFramework,
       eventHandler: TestEventHandler,
       env: Map[String, String],
       scalaNativeVersion: String,
@@ -218,26 +224,186 @@ object ScalaNativeTestRunner {
   ): IO[TestResult] =
     killSignal.tryGet.flatMap {
       case Some(reason) => IO.pure(TestResult(0, 0, 0, 0, TerminationReason.Killed(reason)))
-      case None         =>
-        val work = IO.interruptible {
-          runTestsViaAdapterBlocking(binary, suites, framework, eventHandler, env, scalaNativeVersion, classpath)
-        }
-
-        Outcome
-          .raceKill(killSignal)(work)
-          .flatMap {
-            case Left(result)  => IO.pure(result)
-            case Right(reason) =>
-              IO.pure(TestResult(0, 0, 0, 0, TerminationReason.Killed(reason)))
-          }
-          .handleErrorWith { e =>
-            // `getMessage` is null for plenty of exceptions, and a null here reaches the user as an empty failure reason. The class name always says something.
-            val message = Option(e.getMessage).filter(_.nonEmpty).getOrElse(e.getClass.getName)
-            IO.pure(TestResult(0, 1, 0, 0, TerminationReason.Error(message)))
-          }
+      case None         => runForked(binary, suites, eventHandler, env, scalaNativeVersion, classpath, killSignal)
     }
 
-  private def runTestsViaAdapterBlocking(
+  /** Run the adapter in a forked JVM, so the test binary's output is captured.
+    *
+    * The adapter itself is unchanged — [[ScalaNativeTestFork]] calls exactly the same code this used to call in-process. What changes is *whose* file
+    * descriptors the test binary inherits. Scala Native's `ProcessRunner` spawns it with a hardcoded `inheritIO()`, and in-process that meant the descriptors
+    * of a detached bleep-bsp daemon, which go nowhere: a `println` in a Scala Native test reached neither the report nor any log. Forked, it inherits this
+    * child's descriptors, which are pipes drained below into `onOutput`.
+    *
+    * Counts come from the event stream rather than from the adapter's own tally, so the numbers in the report and the numbers in the result cannot disagree.
+    */
+  private def runForked(
+      binary: Path,
+      suites: List[TestSuite],
+      eventHandler: TestEventHandler,
+      env: Map[String, String],
+      scalaNativeVersion: String,
+      classpath: List[Path],
+      killSignal: Deferred[IO, KillReason]
+  ): IO[TestResult] = {
+    val counts = new AtomicReference(ProcessTestRunner.RunState(0, 0, 0, 0, None))
+
+    def record(status: String, suite: String): Unit = {
+      val _ = counts.updateAndGet { st =>
+        status match {
+          case "passed"  => st.copy(passed = st.passed + 1, currentSuite = Some(suite))
+          case "skipped" => st.copy(skipped = st.skipped + 1, currentSuite = Some(suite))
+          case "ignored" => st.copy(ignored = st.ignored + 1, currentSuite = Some(suite))
+          // Everything else — failed, error, cancelled, pending — is a test that did not pass. Counting only the statuses named here and silently dropping
+          // the rest is how a run reports fewer tests than it ran.
+          case _ => st.copy(failed = st.failed + 1, currentSuite = Some(suite))
+        }
+      }
+    }
+
+    /** Read protocol lines off the socket and replay them onto the handler. A plain daemon thread rather than a fiber: every call here is a synchronous `Unit`
+      * callback, and the handler on the other side does its own blocking dispatch — running that on a cats-effect compute thread is what starved the pool once
+      * already.
+      */
+    def startProtocolReader(server: ServerSocket): Thread = {
+      val body: Runnable = () =>
+        try {
+          val socket = server.accept()
+          try {
+            val reader = new BufferedReader(new InputStreamReader(socket.getInputStream, StandardCharsets.UTF_8))
+            var line = reader.readLine()
+            while (line != null) {
+              bleep.testing.TestProtocol.decodeResponse(line) match {
+                case Right(bleep.testing.TestProtocol.TestResponse.TestStarted(suite, test)) =>
+                  eventHandler.onTestStarted(suite, test)
+                case Right(tf: bleep.testing.TestProtocol.TestResponse.TestFinished) =>
+                  record(tf.status, tf.suite)
+                  eventHandler.onTestFinished(tf.suite, tf.test, statusOf(tf.status), tf.durationMs, tf.message, tf.throwable)
+                case Right(bleep.testing.TestProtocol.TestResponse.Error(message, _)) =>
+                  eventHandler.onOutput(suites.headOption.map(_.fullyQualifiedName).getOrElse("Tests"), message, OutputChannel.Stderr)
+                // SuiteDone carries the fork's own tally, which is deliberately not used — see above. Ready/Log/ThreadDump are not part of this exchange.
+                case Right(_)  => ()
+                case Left(err) =>
+                  eventHandler.onOutput(
+                    suites.headOption.map(_.fullyQualifiedName).getOrElse("Tests"),
+                    s"unparseable line from the Scala Native test fork: ${err.getMessage}",
+                    OutputChannel.Stderr
+                  )
+              }
+              line = reader.readLine()
+            }
+          } finally socket.close()
+        } catch {
+          // The socket is closed when the fork exits; that is how this loop ends.
+          case _: java.io.IOException => ()
+        }
+      val t = new Thread(body, "scala-native-test-protocol")
+      t.setDaemon(true)
+      t.start()
+      t
+    }
+
+    val acquire = IO.blocking {
+      val server = new ServerSocket(0, 1, InetAddress.getLoopbackAddress)
+      val requestFile = Files.createTempFile("bleep-scala-native-test", ".properties")
+      val props = new Properties()
+      props.setProperty(ScalaNativeTestFork.Keys.Port, server.getLocalPort.toString)
+      props.setProperty(ScalaNativeTestFork.Keys.ScalaNativeVersion, scalaNativeVersion)
+      props.setProperty(ScalaNativeTestFork.Keys.Binary, binary.toAbsolutePath.toString)
+      props.setProperty(ScalaNativeTestFork.Keys.Suites, suites.map(_.fullyQualifiedName).mkString(ScalaNativeTestFork.SuiteSeparator.toString))
+      props.setProperty(ScalaNativeTestFork.Keys.Classpath, classpath.map(_.toAbsolutePath.toString).mkString(java.io.File.pathSeparator))
+      env.foreach { case (k, v) => props.setProperty(ScalaNativeTestFork.Keys.EnvPrefix + k, v) }
+      val out = Files.newOutputStream(requestFile)
+      try props.store(out, "bleep Scala Native test fork request")
+      finally out.close()
+      (server, requestFile)
+    }
+
+    Resource
+      .make(acquire) { case (server, requestFile) =>
+        IO.blocking { server.close(); Files.deleteIfExists(requestFile): Unit }.attempt.void
+      }
+      .use { case (server, requestFile) =>
+        // The daemon's own classpath: the fork runs bleep-bsp code, so it needs exactly what bleep-bsp is running with. `java.home` rather than a configured
+        // JVM because the fork must be the same runtime as this process, not the build's target JVM.
+        val javaBin = Path.of(System.getProperty("java.home"), "bin", "java").toString
+        // Same two flags the test-JVM pool passes, for the same reason: without them every Scala Native run carries the JVM's `sun.misc.Unsafe`
+        // deprecation notice, triggered by scala-library and actionable by nobody.
+        val command = List(
+          javaBin,
+          "-XX:+IgnoreUnrecognizedVMOptions",
+          "--sun-misc-unsafe-memory-access=allow",
+          "-cp",
+          System.getProperty("java.class.path"),
+          "bleep.bsp.ScalaNativeTestFork",
+          requestFile.toString
+        )
+        val pb = new ProcessBuilder(command.asJava)
+        env.foreach { case (k, v) => pb.environment().put(k, v) }
+
+        val suiteForOutput = suites.headOption.map(_.fullyQualifiedName).getOrElse("Tests")
+        ProcessTestRunner.run(
+          ProcessTestRunner.Config(
+            processBuilder = pb,
+            handleStdoutLine = line => IO.delay(eventHandler.onOutput(suiteForOutput, line, OutputChannel.Stdout)),
+            handleStderrLine = line => IO.delay(eventHandler.onOutput(suiteForOutput, line, OutputChannel.Stderr)),
+            getRunState = IO.delay(counts.get()),
+            eventHandler = eventHandler,
+            killSignal = killSignal,
+            // The fork spawns the test binary, so killing only the JVM would leave the binary running.
+            killDescendants = true,
+            preRun = IO.delay(startProtocolReader(server)).void,
+            onNormalExit = IO.unit,
+            cleanup = IO.unit
+          )
+        )
+      }
+  }
+
+  private def statusOf(name: String): TestStatus =
+    name match {
+      case "passed"    => TestStatus.Passed
+      case "skipped"   => TestStatus.Skipped
+      case "ignored"   => TestStatus.Ignored
+      case "cancelled" => TestStatus.Cancelled
+      case _           => TestStatus.Failed
+    }
+
+  /** A `scala.scalanative.build.Logger` that forwards the adapter's output into bleep's test output.
+    *
+    * This used to be `Logger.default`, which writes to the console of whatever JVM it runs in — here a *detached* bleep-bsp daemon whose own streams go
+    * nowhere. Everything the adapter said, and everything it relayed from the test binary, went to a file descriptor nobody reads, which is why a Scala Native
+    * test's `println` produced no `<system-out>` at all.
+    *
+    * The com channel is a `ServerSocket` (see `ComRunner`), not the binary's stdout, so the binary's own output is free for the program to use rather than
+    * being multiplexed into a protocol.
+    */
+  private def nativeAdapterLogger(loader: ClassLoader, eventHandler: TestEventHandler, suite: String): AnyRef = {
+    val loggerClass = loader.loadClass("scala.scalanative.build.Logger")
+    val handler = new java.lang.reflect.InvocationHandler {
+      def invoke(proxy: Any, method: java.lang.reflect.Method, rawArgs: Array[AnyRef]): AnyRef = {
+        val args = if (rawArgs == null) Array.empty[AnyRef] else rawArgs
+        def first: String = if (args.isEmpty || args(0) == null) "" else String.valueOf(args(0))
+        method.getName match {
+          case "error"                   => eventHandler.onOutput(suite, first, OutputChannel.Stderr); null
+          case "warn" | "info" | "debug" => eventHandler.onOutput(suite, first, OutputChannel.Stdout); null
+          case "trace"                   =>
+            val t = if (args.isEmpty) null else args(0).asInstanceOf[Throwable]
+            eventHandler.onOutput(suite, if (t == null) "" else String.valueOf(t), OutputChannel.Stderr)
+            null
+          case "running"  => eventHandler.onOutput(suite, s"running $first", OutputChannel.Stdout); null
+          case "hashCode" => Integer.valueOf(System.identityHashCode(proxy))
+          case "equals"   => java.lang.Boolean.valueOf(proxy.asInstanceOf[AnyRef] eq args(0))
+          case "toString" => s"bleep scala-native adapter logger for $suite"
+          // An unhandled method means the interface changed. A proxy cannot run the trait's own default implementation, so guessing here would silently
+          // drop output; failing names the method instead.
+          case other => throw new UnsupportedOperationException(s"scala.scalanative.build.Logger.$other is not handled by bleep's proxy")
+        }
+      }
+    }
+    java.lang.reflect.Proxy.newProxyInstance(loader, Array(loggerClass), handler)
+  }
+
+  private[bsp] def runTestsViaAdapterBlocking(
       binary: Path,
       suites: List[TestSuite],
       @annotation.unused framework: TestFramework,
@@ -267,11 +433,11 @@ object ScalaNativeTestRunner {
 
     // Set logger
     val buildLoggerClass = loader.loadClass("scala.scalanative.build.Logger")
-    val buildLoggerCompanion = loader.loadClass("scala.scalanative.build.Logger$")
-    val buildLoggerObj = buildLoggerCompanion.getField("MODULE$").get(null)
-    val defaultLogger = buildLoggerCompanion.getMethod("default").invoke(buildLoggerObj)
     val withLogger = configClass.getMethod("withLogger", buildLoggerClass)
-    config = withLogger.invoke(config, defaultLogger).asInstanceOf[AnyRef]
+    // The suite the adapter's output is attributed to. The adapter runs the whole binary, so its diagnostics are not per-suite; naming the first requested
+    // suite keeps the output attached to something the report already has, rather than inventing a suite that never ran.
+    val outputSuite = suites.headOption.map(_.fullyQualifiedName).getOrElse("Tests")
+    config = withLogger.invoke(config, nativeAdapterLogger(loader, eventHandler, outputSuite)).asInstanceOf[AnyRef]
 
     // Create TestAdapter
     val adapterClass = loader.loadClass("scala.scalanative.testinterface.adapter.TestAdapter")
@@ -349,7 +515,7 @@ object ScalaNativeTestRunner {
           currentSuite.foreach { suite =>
             handler.onTestStarted(suite, testName)
             val durationMs = parseDuration(duration)
-            handler.onTestFinished(suite, testName, TestStatus.Passed, durationMs, None)
+            handler.onTestFinished(suite, testName, TestStatus.Passed, durationMs, None, None)
           }
           passed += 1
 
@@ -357,7 +523,7 @@ object ScalaNativeTestRunner {
           currentSuite.foreach { suite =>
             handler.onTestStarted(suite, testName)
             val durationMs = parseDuration(duration)
-            handler.onTestFinished(suite, testName, TestStatus.Failed, durationMs, None)
+            handler.onTestFinished(suite, testName, TestStatus.Failed, durationMs, None, None)
           }
           failed += 1
 
@@ -426,21 +592,21 @@ object ScalaNativeTestRunner {
         case testFailedPattern(testName) =>
           currentSuite.foreach { suite =>
             handler.onTestStarted(suite, testName)
-            handler.onTestFinished(suite, testName, TestStatus.Failed, 0, None)
+            handler.onTestFinished(suite, testName, TestStatus.Failed, 0, None, None)
           }
           failed += 1
 
         case testIgnoredPattern(testName) =>
           currentSuite.foreach { suite =>
             handler.onTestStarted(suite, testName)
-            handler.onTestFinished(suite, testName, TestStatus.Ignored, 0, None)
+            handler.onTestFinished(suite, testName, TestStatus.Ignored, 0, None, None)
           }
           ignored += 1
 
         case testPassedPattern(testName) =>
           currentSuite.foreach { suite =>
             handler.onTestStarted(suite, testName)
-            handler.onTestFinished(suite, testName, TestStatus.Passed, 0, None)
+            handler.onTestFinished(suite, testName, TestStatus.Passed, 0, None, None)
           }
           passed += 1
 
@@ -490,7 +656,7 @@ object ScalaNativeTestRunner {
           }
 
           handler.onTestStarted(suite, test)
-          handler.onTestFinished(suite, test, TestStatus.Passed, duration.toLong, None)
+          handler.onTestFinished(suite, test, TestStatus.Passed, duration.toLong, None, None)
           passed += 1
 
         case testFailedPattern(testPath, duration) =>
@@ -510,7 +676,7 @@ object ScalaNativeTestRunner {
           }
 
           handler.onTestStarted(suite, test)
-          handler.onTestFinished(suite, test, TestStatus.Failed, duration.toLong, None)
+          handler.onTestFinished(suite, test, TestStatus.Failed, duration.toLong, None, None)
           failed += 1
 
         case _ =>
